Fix exclusion handling for 'tag-must-exist' rule. Improve logging. Strengthen XSD schema. Prepare for 1.0.5